<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectCurrentLocation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="112dp"
                    android:layout_height="122dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:text="@string/selectcurrent_text"
                    android:textAlignment="center"
                    android:textIsSelectable="false"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/currentlocationSpin"
                    android:layout_width="348dp"
                    android:layout_height="171dp"
                    android:layout_gravity="center"

                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/currentlocationSpinner" />

                <Button
                    android:id="@+id/confirmBtn"
                    android:layout_width="341dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"


                    android:background="@color/colorAccent"
                    android:text="@string/confirmtext"
                    android:textSize="20dp" />

                <ImageButton
                    android:id="@+id/scanqrBtn"
                    android:layout_width="200dp"
                    android:layout_height="200dp"

                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/scanqr" />

            </LinearLayout>

        </LinearLayout>


</FrameLayout>