<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapFromList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/currentshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/currentnew"
            tools:srcCompat="@drawable/currentnew" />

        <TextView
            android:id="@+id/currentTextV"
            android:layout_width="347dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/current_text_show"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/destinationshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/marknew"
            tools:srcCompat="@drawable/marknew" />

        <TextView
            android:id="@+id/destinationTextV"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/destination_text_show"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal"></LinearLayout>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="278dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/direction_arrow"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/turnleftarrow" />

        <TextView
            android:id="@+id/directionstep"
            android:layout_width="269dp"
            android:layout_height="55dp"

            android:layout_gravity="center"
            android:gravity="center|left"
            android:textColor="@android:color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:background="@color/colorAccent"
            android:text="@string/next_text"
            android:textColor="@android:color/background_dark"
            android:textSize="25dp" />

        <Button
            android:id="@+id/lostbutton"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@color/zxing_possible_result_points"
            android:text="@string/lost_text"
            android:textSize="25dp" />

    </LinearLayout>


</LinearLayout>